# CXXThreadingTasks

./: .gitignore  README.md
.github/workflows/: cmake.yml
fifth/: CMakeLists.txt  main.cpp  task.cpp  task.h
fifth/libs/: CMakeLists.txt  CppConsoleTable.hpp
fifth/log_duration/: CMakeLists.txt
fifth/rand_int/: rand.cpp  rand.h
sixth/: CMakeLists.txt  main.cpp  task.cpp  task.h
sixth/log_duration/: profile.h
sixth/rand_int/: CMakeLists.txt
